<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="163dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtTitulo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="104dp"
        android:text="@string/txtPeso"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtAltura"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPeso" />

    <EditText
        android:id="@+id/editTxtPeso"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/txtPeso"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/editTxtAltura"
        android:layout_width="78dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/txtAltura"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPeso" />

    <TextView
        android:id="@+id/txtExKg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/txtExemploKg1"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editTxtPeso"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtExKg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/txtExemploKg2"
        app:layout_constraintStart_toEndOf="@+id/txtExKg1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtExM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:text="@string/txtExemploM1"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/editTxtAltura"
        app:layout_constraintTop_toBottomOf="@+id/txtExKg1" />

    <TextView
        android:id="@+id/txtExM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/txtExemploM2"
        app:layout_constraintStart_toEndOf="@+id/txtExM1"
        app:layout_constraintTop_toBottomOf="@+id/txtExKg2" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="302dp"
        android:layout_height="43dp"
        android:layout_marginBottom="260dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="37dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/btnCalcular"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnValoresReferencia"
        android:layout_width="301dp"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="39dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btnReferencia"
        android:textColor="@android:color/white"
        android:textColorHighlight="#ffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtResultado"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular"
        />

    <TextView
        android:id="@+id/txtValorImc"
        android:layout_width="125dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="76dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <ImageView
        android:id="@+id/imgResultado"
        android:layout_width="168dp"
        android:layout_height="128dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/mysterybox"
        app:layout_constraintBottom_toTopOf="@+id/btnValoresReferencia"
        app:layout_constraintEnd_toStartOf="@+id/txtValorImc"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResult"
        app:layout_constraintVertical_bias="0.25" />

</android.support.constraint.ConstraintLayout>